--- a/edo_pro/rasasc_jeff/config.yml
+++ b/edo_pro/rasasc_jeff/config.yml
@@ -1,15 +1,6 @@
-# Configuration for Rasa NLU.
-# https://rasa.com/docs/rasa/nlu/components/
 language: en
 pipeline: supervised_embeddings
-
-# Configuration for Rasa Core.
-# https://rasa.com/docs/rasa/core/policies/
 policies:
-  - name: "policy.EdisonPolicy"
-    epochs: 200
-    batch_size: 50
-    max_training_samples: 300
-  - name: FallbackPolicy
-  - name: MemoizationPolicy
-  - name: MappingPolicy
+- name: MemoizationPolicy
+- name: TEDPolicy
+- name: MappingPolicy
