--- a/edo_pro/rasasc_jeff/config.yml
+++ b/edo_pro/rasasc_jeff/config.yml
@@ -1,6 +1,19 @@
-language: en
-pipeline: supervised_embeddings
+language: "fr"  # your two-letter language code
 policies:
 - name: MemoizationPolicy
-- name: TEDPolicy
+  max_history: 1
 - name: MappingPolicy
+pipeline:
+  - name: WhitespaceTokenizer
+  - name: RegexFeaturizer
+  - name: LexicalSyntacticFeaturizer
+  - name: CountVectorsFeaturizer
+  - name: CountVectorsFeaturizer
+    analyzer: "char_wb"
+    min_ngram: 1
+    max_ngram: 4
+  - name: DIETClassifier
+    epochs: 100
+  - name: EntitySynonymMapper
+  - name: ResponseSelector
+    epochs: 100
