add new rasa project,try to run rasa test and evaluate an nlu model

--- a/wangxy/XY_rasa_02/config.yml
+++ b/wangxy/XY_rasa_02/config.yml
@@ -1,10 +1,8 @@
 # Configuration for Rasa NLU.
 # https://rasa.com/docs/rasa/nlu/components/
 language: en
-
 pipeline:
-  - name: ConveRTTokenizer
-  - name: ConveRTFeaturizer
+  - name: WhitespaceTokenizer
   - name: RegexFeaturizer
   - name: LexicalSyntacticFeaturizer
   - name: CountVectorsFeaturizer
