--- a/edo_pro/wangxy/XY_rasa_03/credentials.yml
+++ b/edo_pro/wangxy/XY_rasa_03/credentials.yml
@@ -18,7 +18,7 @@ rest:
 
 #socketio:
 #  user_message_evt: <event name for user message>
-#  bot_message_evt: <event name for bot messages>
+#  bot_message_evt: <event name for but messages>
 #  session_persistence: <true/false>
 
 #mattermost:
