--- a/edo_pro/wangxy/XY_rasa_04/config.yml
+++ b/edo_pro/wangxy/XY_rasa_04/config.yml
@@ -1,10 +1,10 @@
 # Configuration for Rasa NLU.
 # https://rasa.com/docs/rasa/nlu/components/
+language: en
 
 pipeline:
   - name: ConveRTTokenizer
   - name: ConveRTFeaturizer
-  - name: RegexFeaturizer
   - name: LexicalSyntacticFeaturizer
   - name: CountVectorsFeaturizer
   - name: CountVectorsFeaturizer
