update rasa model

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -10,8 +10,10 @@ EXPOSE 5005
 COPY ./edo_pro ./edo_pro
 # COPY ./edo_bert_finetune ./edo_bert_finetune
 # COPY ./edo_plugin ./edo_plugin
-ADD https://edison-static.s3-us-west-2.amazonaws.com/rasa-model/20200526-181834.tar.gz ./edo_pro/rasasc_jeff/models/
-RUN cd ./edo_pro/rasasc_jeff; pip install -r requirements.txt
+
+RUN mkdir -p ./edo_pro/wangxy/XY_rasa_04/models
+ADD https://edison-static.s3-us-west-2.amazonaws.com/rasa-model/20200723-133134.tar.gz ./edo_pro/wangxy/XY_rasa_04/models/
+RUN cd ./edo_pro/wangxy/XY_rasa_04; pip install -r requirements.txt
 
 ENTRYPOINT ["python"]
-CMD ["-m", "edo_pro.rasasc_jeff", "-r"]
+CMD ["-m", "edo_pro.wangxy.XY_rasa_04", "-r"]
